[metadata]
name = roshan-logger
version = 0.2.3
author = AliRezaDm
author_email = alireza.dm80@gmail.com
description = A comprehensive Django and Django REST Framework (DRF) compatible logging package that automatically logs everything in your project - from HTTP requests and responses to model changes and authentication events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alireza/mypackage
license = MIT


[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2.1, <5.2.8
    djangorestframework>=3.12.2, <3.16


[options.packages.find]
exclude =
    tests*


